--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ github_username:  nnakadozono
 markdown: kramdown
 kramdown:
   input: GFM
+  toc_levels: 1..2
 theme: minima
 plugins:
   - jekyll-feed
