change width of pages

--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,9 @@ plugins:
   - jekyll-default-layout
   - jekyll-titles-from-headings  
 
+include:
+  - assets/css/custom.css
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
